# proj_casaSimu-

saveproj_casaSimu/: CMakeLists.txt  Logica.cpp  Logica.h  main.cpp
saveproj_casaSimu/cpp/: Aparelho.cpp  Habitacao.cpp  Processador.cpp  Propriedade.cpp  Regra.cpp  Sensor.cpp  SimuUI.cpp  Zona.cpp
saveproj_casaSimu/headers/: Aparelho.h  Habitacao.h  Processador.h  Propriedade.h  Regra.h  Sensor.h  SimuUI.h  Zona.h
